refactor(#52): rename APIAsyncTask and add REST Adapter